# Twitter-Sentiment-Detection

./: .dockerignore  .gitignore  Docker-compose.yaml  Dockerfile  LICENSE  Makefile  PyProject.toml  README.md  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml  q  setup.py
.dvc/: config
.github/ecs/: README.md  twitter-sentiment-containers-revision8.json
.github/workflows/: ci.yaml
Prod-Script/: promote_model.py
backend/: custom_metrics.py  main.py
backend/api/: routes_auth.py  routes_health.py  routes_predict.py  routes_root.py
backend/cache/: redis_model_cache.py
backend/core/: config.py  database.py  dependencies.py  rate_limiter.py  security.py
backend/db/models/: refresh_token.py  users.py
backend/loader/: artifacts_loader.py  redis_loader.py
backend/logging_fastapi/: logger_api.py
backend/middlewares/: response_logger.py
backend/schema/: model_schema.py  users_auth.py
backend/services/: model_service.py
backend/static/: style.css
backend/templates/: dashboard.html  index.html  login.html  result.html  signup.html
deployment-info/: appspec.yaml  code-deploy-template.txt
deployment-info/scripts/: install_dependencies.sh  start_docker.sh
docs/: Makefile  conf.py  make.bat
frontend/: index.html
notebooks/: exp1_baseline_model.ipynb  exp2_bow_vs_tfidf.ipynb  exp3_lor_bow_hp.ipynb  experiments.ipynb
reports/: .gitignore  Authentication FLow.drawio
scripts/: setup_nltk.py
src/: logger_class.py
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering.py
src/models/: model_building.py  model_evaluation.py  model_registry.py
tests/: conftest.py
tests/api/integration/: conftest.py  test_auth_flow.py  test_predict_flow.py  test_public_and_health.py
tests/model/: conftest.py  test_model_artifacts.py  test_model_service.py
(+6 files in other folders)
