[project]
name = "Emotion-Detection"
version = "0.0.1"
description = "Twitter sentiment detection system with FastAPI inference service."
readme = "README.md"
authors = [
  {name = "Avanindra Bose", email = "avanindrabose0218@gmail.com"}
]
maintainers = [
  {name = "Avanindra Bose", email = "avanindrabose0218@gmail.com"}
]
license = {text = "MIT"}

requires-python = ">=3.10"

# ONLY API + INFERENCE DEPENDENCIES
dependencies = [
  # CLI (optional but lightweight)
  "typer",

  # Backend (API)
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic[email]",
  "python-multipart",

  # Auth & security
  "python-jose[cryptography]",
  "bcrypt",

  # Database
  "sqlalchemy",
  "asyncpg",

  # Cache
  "redis",

  # MLflow (for remote model loading via DagsHub)
  "mlflow>=3.0",

  # Inference requirements (REQUIRED for .joblib models)
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "numpy>=1.24",
  "nltk",
  "joblib",

  # Utilities
  "pyyaml",
]

# OPTIONAL GROUPS FOR TRAINING / PIPELINES
[project.optional-dependencies]

ml = [
  "pandas>=2.0",
  "xgboost",
  "hyperopt",
  "nltk",
  "spacy",
]

pipeline = [
  "dvc>=3.0",
  "dagshub",
  "dvc[s3]",
  "awscli",
]

dev = [
  "matplotlib",
  "seaborn",
]

test = [
  "coverage",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "ty",
  "ipdb",
]

[project.urls]
bugs = "https://github.com/AvanindraBose/Subscribly/issues"
homepage = "https://github.com/AvanindraBose/Subscribly"

[project.scripts]
Subscribly = "Subscribly.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.uv]
package = true
